--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Anish :)</p>
+            <p class="footer__title">Smile :)</p>
             <div class="footer__social">
                 <a href="https://www.facebook.com/profile.php?id=100004726578747" class="footer__icon"><i class='bx bxl-facebook' ></i></a>               
                 <a href="https://www.instagram.com/anish7_/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
